fix(ExpressionSerivce): .get(0) => .getFirst()